--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,7 @@ jobs:
       - run: sudo apt install bazel
       - run: bazel --version
       - run: >
-          pushd examples/bazel
+          pushd examples/bazel &&
           bazel run -s src:hello
 
   build-and-test-osx:
@@ -141,6 +141,7 @@ workflows:
       - static-test
       - build-and-test
       - build-and-test-clang
+      - build-and-test-clang-latest
       - build-and-test-arm
       - build-and-test-osx:
           requires:
