Reenable memcheck on CI: install valgrind

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
     steps:
       - checkout
       - linux-setup
+      - run: sudo apt-get install -y valgrind
       - build-test
       - run: ctest -T Coverage
       - codecov/upload
