--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,22 +1,21 @@
-image: Visual Studio 2015
+image: 
+  - Visual Studio 2015
+  - Visual Studio 2022
 version: '{build}'
 
 branches:
   except:
     - gh-pages
 
-platform: x64
+platform: 
+  - x64
+  - x86
 
-
-environment:
-  matrix:
-  - CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
 
 # Via https://github.com/apitrace/apitrace/blob/master/appveyor.yml
 
 before_build:
-- cmake -H. -Bbuild -G "%CMAKE_GENERATOR%"
-- C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\x86_amd64\CL.exe /?
+- cmake -H. -Bbuild
 
 build_script:
 - if "%APPVEYOR_REPO_TAG%"=="true" (set CONFIGURATION=RelWithDebInfo) else (set CONFIGURATION=Debug)
