--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,29 +1,45 @@
-image: 
-  - Visual Studio 2015
-  - Visual Studio 2022
-version: '{build}'
+# Fast single-config build for PRs
+-
+  branches:
+    except: [master]
+ 
+  image: Visual Studio 2022
+  version: '{build}'
 
-branches:
-  except:
-    - gh-pages
+  platform: x64
 
-platform: 
-  - x64
-  - x86
+  # Do not build feature branch with open Pull Requests
+  # The build is redundant and gets queued behind the other one.
+  skip_branch_with_pr: true
 
-# Do not build feature branch with open Pull Requests
-# The build is redundant and gets queued behind the other one.
-skip_branch_with_pr: true
+  before_build:
+  - cmake -H. -Bbuild
 
-# Via https://github.com/apitrace/apitrace/blob/master/appveyor.yml
+  build_script:
+  - if "%APPVEYOR_REPO_TAG%"=="true" (set CONFIGURATION=RelWithDebInfo) else (set CONFIGURATION=Debug)
+  - cmake --build build --config "%CONFIGURATION%"
 
-before_build:
-- cmake -H. -Bbuild
+- 
+  branches:
+    only: [master]
+ 
+  image: 
+    - Visual Studio 2015
+    - Visual Studio 2022
+  version: '{build}'
 
-build_script:
-- if "%APPVEYOR_REPO_TAG%"=="true" (set CONFIGURATION=RelWithDebInfo) else (set CONFIGURATION=Debug)
-- cmake --build build --config "%CONFIGURATION%"
+  platform: 
+    - x64
+    - x86
+
+  skip_branch_with_pr: true
+
+  before_build:
+  - cmake -H. -Bbuild
+
+  build_script:
+  - if "%APPVEYOR_REPO_TAG%"=="true" (set CONFIGURATION=RelWithDebInfo) else (set CONFIGURATION=Debug)
+  - cmake --build build --config "%CONFIGURATION%"
 
 # TODO enable CMocka tests, maybe package the binaries
 # TODO add MinGW
-# TODO add older MSVC
