--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ commands:
   linux-setup:
     steps:
     - run: sudo apt-get update
-    - run: sudo apt-get install -y cmake "${TOOLCHAIN_PACKAGE}"
+    - run: sudo apt-get install -y cmake ${TOOLCHAIN_PACKAGES}
     - run: sudo apt install libcmocka-dev
   build:
     steps:
@@ -42,7 +42,7 @@ jobs:
     machine:
       image: ubuntu-2204:2022.10.2
     environment:
-      TOOLCHAIN_PACKAGE: g++
+      TOOLCHAIN_PACKAGES: g++
     steps:
       - checkout
       - linux-setup
@@ -65,7 +65,7 @@ jobs:
     machine:
       image: ubuntu-2204:2022.10.2
     environment:
-      TOOLCHAIN_PACKAGE: g++
+      TOOLCHAIN_PACKAGES: g++
       CMAKE_COVERAGE: ON
     steps:
       - checkout
@@ -86,7 +86,7 @@ jobs:
     machine:
       image: ubuntu-2204:2022.10.2
     environment:
-      TOOLCHAIN_PACKAGE: clang
+      TOOLCHAIN_PACKAGES: clang
       CC: clang
       CXX: clang++
     steps:
@@ -99,7 +99,7 @@ jobs:
     machine:
       image: ubuntu-2204:2022.10.2
     environment:
-      TOOLCHAIN_PACKAGE: gcc-multilib
+      TOOLCHAIN_PACKAGES: gcc-multilib g++-multilib libc6-dev-i386
     steps:
       - checkout
       - linux-setup
@@ -110,7 +110,7 @@ jobs:
     machine:
       image: ubuntu-2204:2022.10.2
     environment:
-      TOOLCHAIN_PACKAGE: clang
+      TOOLCHAIN_PACKAGES: clang
       CC: clang
       CXX: clang++
     steps:
@@ -138,7 +138,7 @@ jobs:
     machine:
       image: ubuntu-2204:2022.10.2
     environment:
-      TOOLCHAIN_PACKAGE: g++
+      TOOLCHAIN_PACKAGES: g++
     resource_class: arm.medium
     steps:
       - checkout
@@ -150,7 +150,7 @@ jobs:
     machine:
       image: ubuntu-2204:2022.10.2
     environment:
-      TOOLCHAIN_PACKAGE: g++
+      TOOLCHAIN_PACKAGES: g++
     steps:
       - checkout
       - linux-setup
