--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,8 +192,14 @@ jobs:
       shell: 'bash.exe'
     steps:
       - checkout
-      - run: cmake -H. -Bbuild
-      - run: cmake --build build
+      - run: choco install cmake -y
+      - run: git clone https://git.cryptomilk.org/projects/cmocka.git
+      - run: /c/Program\ Files/Cmake/bin/cmake -S cmocka -B cmocka_build
+      - run: /c/Program\ Files/Cmake/bin/cmake --build cmocka_build
+      - run: >
+          /c/Program\ Files/Cmake/bin/cmake -S . -B libcbor_build \
+          -DWITH_TESTS=ON -DCMOCKA_INCLUDE_DIR=cmocka/include -DCMOCKA_LIBRARIES=cmocka_build/src/Debug
+      - run: /c/Program\ Files/Cmake/bin/cmake --build libcbor_build
 
 workflows:
   build-and-test:
