--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,7 +199,9 @@ jobs:
       - run: /c/Program\ Files/Cmake/bin/cmake --build cmocka_build
       - run: /c/Program\ Files/Cmake/bin/cmake -S . -B libcbor_build -DWITH_TESTS=ON -DCMOCKA_INCLUDE_DIR=cmocka/include -DCMOCKA_LIBRARIES=$(pwd)/cmocka_build/src/Debug/cmocka.lib
       - run: /c/Program\ Files/Cmake/bin/cmake --build libcbor_build
-      - run: /c/Program\ Files/Cmake/bin/ctest.exe libcbor_build
+      - run: >
+          export PATH="$(pwd)/cmocka_build/src/Debug/:$PATH" &&
+          /c/Program\ Files/Cmake/bin/ctest.exe --test-dir libcbor_build
 
 workflows:
   build-and-test:
