--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,7 +201,8 @@ jobs:
       - run: /c/Program\ Files/Cmake/bin/cmake --build libcbor_build
       - run: >
           export PATH="$(pwd)/cmocka_build/src/Debug/:$PATH" &&
-          /c/Program\ Files/Cmake/bin/ctest.exe --test-dir libcbor_build
+          /c/Program\ Files/Cmake/bin/ctest.exe --test-dir libcbor_build &&
+          /c/Program\ Files/Cmake/bin/ctest.exe --test-dir libcbor_build --rerun-failed --output-on-failure
 
 workflows:
   build-and-test:
