--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ SET(CBOR_VERSION_MINOR "10")
 SET(CBOR_VERSION_PATCH "2")
 SET(CBOR_VERSION ${CBOR_VERSION_MAJOR}.${CBOR_VERSION_MINOR}.${CBOR_VERSION_PATCH})
 
-set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY true)
+option(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY "cmake --build --target install does not depend on cmake --build" true)
 include(CheckIncludeFiles)
 
 include(TestBigEndian)
