--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,8 @@ orbs:
 
 jobs:
   static-test:
-    machine:
-      image: ubuntu-2204:2022.10.2
+    machine: &default-machine
+      image: ubuntu-2204:2023.07.2
     environment:
       TOOLCHAIN_PACKAGES: g++
     steps:
@@ -61,7 +61,7 @@ jobs:
 
   build-and-test:
     machine:
-      image: ubuntu-2204:2022.10.2
+      <<: *default-machine
     environment:
       TOOLCHAIN_PACKAGES: g++
       CMAKE_COVERAGE: ON
@@ -82,7 +82,7 @@ jobs:
 
   build-and-test-clang:
     machine:
-      image: ubuntu-2204:2022.10.2
+      <<: *default-machine
     environment:
       TOOLCHAIN_PACKAGES: clang
       CC: clang
@@ -95,7 +95,7 @@ jobs:
 
   build-and-test-32b:
     machine:
-      image: ubuntu-2204:2022.10.2
+      <<: *default-machine
     steps:
       - checkout
       - run: sudo apt-get update
@@ -118,7 +118,7 @@ jobs:
 
   build-and-test-release-clang:
     machine:
-      image: ubuntu-2204:2022.10.2
+      <<: *default-machine
     environment:
       TOOLCHAIN_PACKAGES: clang
       CC: clang
@@ -131,7 +131,7 @@ jobs:
 
   llvm-coverage:
     machine:
-      image: ubuntu-2204:2022.10.2
+      <<: *default-machine
     environment:
       TOOLCHAIN_PACKAGES: clang
       CC: clang
@@ -146,7 +146,7 @@ jobs:
 
   build-and-test-arm:
     machine:
-      image: ubuntu-2204:2022.10.2
+      <<: *default-machine
     environment:
       TOOLCHAIN_PACKAGES: g++
     resource_class: arm.medium
@@ -158,7 +158,7 @@ jobs:
 
   build-bazel:
     machine:
-      image: ubuntu-2204:2022.10.2
+      image: ubuntu-2204:2023.07.2
     environment:
       TOOLCHAIN_PACKAGES: g++
     steps:
