Fix requirements path

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -18,4 +18,4 @@ sphinx:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-   - requirements: docs/requirements.txt
+   - requirements: docs/source/requirements.txt
