--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,10 +12,10 @@ build:
     python: "3.11"
 
 sphinx:
-  configuration: docs/source/conf.py
+  configuration: doc/source/conf.py
 
 # We recommend specifying your dependencies to enable reproducible builds:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-   - requirements: docs/source/requirements.txt
+   - requirements: doc/source/requirements.txt
