--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,8 @@ if(MSVC)
     # This just doesn't work right -- https://msdn.microsoft.com/en-us/library/5ft82fed.aspx
     set(CBOR_RESTRICT_SPECIFIER "")
 
-    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /sdl")
+    # Do not prepend existing flags since MSVC cannot handle the default
+    set(CMAKE_C_FLAGS_DEBUG "/sdl")
 else()
     set(CBOR_RESTRICT_SPECIFIER "restrict")
 
