Respect CMAKE_INTERPROCEDURAL_OPTIMIZATION

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,34 +155,39 @@ include_directories(${PROJECT_BINARY_DIR})
 # CMake >= 3.9.0 enables LTO for GCC and Clang with INTERPROCEDURAL_OPTIMIZATION
 # Policy CMP0069 enables this behavior when we set the minimum CMake version < 3.9.0
 # Checking for LTO support before setting INTERPROCEDURAL_OPTIMIZATION is mandatory with CMP0069 set to NEW.
-set(use_lto FALSE)
-if(${CMAKE_VERSION} VERSION_GREATER "3.9.0" OR ${CMAKE_VERSION} VERSION_EQUAL "3.9.0")
+set(lto_supported FALSE)
+if (${CMAKE_VERSION} VERSION_GREATER "3.9.0" OR ${CMAKE_VERSION} VERSION_EQUAL "3.9.0")
     cmake_policy(SET CMP0069 NEW)
     # Require LTO support to build libcbor with newer CMake versions
     include(CheckIPOSupported)
-    check_ipo_supported(RESULT use_lto)
-endif(${CMAKE_VERSION} VERSION_GREATER "3.9.0" OR ${CMAKE_VERSION} VERSION_EQUAL "3.9.0")
-if(use_lto)
-    message(STATUS "LTO is enabled")
+    check_ipo_supported(RESULT lto_supported)
+endif ()
+
+if (NOT DEFINED CMAKE_INTERPROCEDURAL_OPTIMIZATION)
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+endif ()
+
+if(lto_supported)
+    message(STATUS "LTO is supported and CMAKE_INTERPROCEDURAL_OPTIMIZATION=${CMAKE_INTERPROCEDURAL_OPTIMIZATION}")
 else()
-    message(STATUS "LTO is not enabled")
-endif(use_lto)
+    message(STATUS "LTO is not supported")
+endif(lto_supported)
 
 add_subdirectory(src)
-if(use_lto)
-    set_property(DIRECTORY src PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
-endif(use_lto)
+if (lto_supported)
+    set_property(DIRECTORY src PROPERTY INTERPROCEDURAL_OPTIMIZATION CMAKE_INTERPROCEDURAL_OPTIMIZATION)
+endif ()
 
 if (WITH_TESTS)
     add_subdirectory(test)
-    if(use_lto)
-        set_property(DIRECTORY test PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
-    endif(use_lto)
-endif (WITH_TESTS)
+    if(lto_supported)
+        set_property(DIRECTORY test PROPERTY INTERPROCEDURAL_OPTIMIZATION CMAKE_INTERPROCEDURAL_OPTIMIZATION)
+    endif(lto_supported)
+endif ()
 
 if (WITH_EXAMPLES)
     add_subdirectory(examples)
-    if(use_lto)
-        set_property(DIRECTORY examples PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
-    endif(use_lto)
-endif (WITH_EXAMPLES)
+    if(lto_supported)
+        set_property(DIRECTORY examples PROPERTY INTERPROCEDURAL_OPTIMIZATION CMAKE_INTERPROCEDURAL_OPTIMIZATION)
+    endif(lto_supported)
+endif ()
