--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,8 +8,8 @@ find_library(MATH_LIBRARY m)
 
 check_include_file("execinfo.h" HAS_EXECINFO)
 
-foreach(TEST ${TESTS})
-  string(REGEX REPLACE ".*/([^/]+).c" "\\1" NAME ${TEST})
+foreach(test_file ${TESTS})
+  string(REGEX REPLACE ".*/([^/]+).c" "\\1" NAME ${test_file})
   message("Adding test ${NAME}")
   add_executable(${NAME} "${NAME}.c" assertions.c stream_expectations.c
                          test_allocator.c)
@@ -26,7 +26,7 @@ foreach(TEST ${TESTS})
   set_tests_properties(ctest_run_${NAME} PROPERTIES DEPENDS
                                                     ctest_build_test_${NAME})
   add_dependencies(coverage ${NAME})
-endforeach(TEST)
+endforeach()
 
 add_executable(cpp_linkage_test cpp_linkage_test.cpp)
 target_link_libraries(cpp_linkage_test cbor)
