Fixed code coverage option typo in CMakeLists.txt
It appears that a typo was introduced in CMakeLists.txt over 2 years ago in commit a4535264d046bf9713ef58a5a5eb9fc12384aa91 that effectively disabled the code coverage option. I fixed it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,7 +169,7 @@ add_custom_target(
 
 include_directories(src)
 
-option(c "Enable code coverage instrumentation" OFF)
+option(COVERAGE "Enable code coverage instrumentation" OFF)
 if(COVERAGE)
   message("Configuring code coverage instrumentation")
   if(CMAKE_C_COMPILER_ID MATCHES "GNU")
