--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ orbs:
 jobs:
   static-test:
     machine: &default-machine
-      image: ubuntu-2204:2023.07.2
+      image: ubuntu-2204:current
     environment:
       TOOLCHAIN_PACKAGES: g++
     steps:
