--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ jobs:
 
   build-bazel:
     machine:
-      image: ubuntu-2204:2023.07.2
+      <<: *default-machine
     environment:
       TOOLCHAIN_PACKAGES: g++
     steps:
