Export and install CMake targets

--- a/src/libcborConfig.cmake.in
+++ b/src/libcborConfig.cmake.in
@@ -2,6 +2,9 @@ set(CBOR_VERSION @CBOR_VERSION@)
 
 @PACKAGE_INIT@
 
+include("${CMAKE_CURRENT_LIST_DIR}/libcborTargets.cmake")
+
+# legacy
 set_and_check(CBOR_INCLUDE_DIR "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@")
 set_and_check(CBOR_INCLUDE_DIRS "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@")
 
