Gitignore MODULE.bazel.lock

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ examples/bazel/bazel-bazel
 examples/bazel/bazel-bin
 examples/bazel/bazel-out
 examples/bazel/bazel-testlogs
-examples/bazel/MODULE.bazel.lock
+**MODULE.bazel.lock
