--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-build
 *~
 nbproject
 .idea
@@ -8,6 +7,7 @@ cmake-build-debug
 venv
 **.DS_Store
 .vscode
+doc/build
 # No top-level requirements, see doc/source
 requirements.txt
 examples/bazel/bazel-bazel
