--- a/doc/source/requirements.txt
+++ b/doc/source/requirements.txt
@@ -16,6 +16,8 @@ Pygments==2.16.1
 pyparsing==3.1.1
 pytz==2021.3
 requests==2.31.0
+setuptools==75.8.2
+six==1.17.0
 snowballstemmer==2.2.0
 Sphinx==7.2.6
 sphinx-autobuild==2021.3.14
@@ -23,6 +25,7 @@ sphinx-rtd-theme==1.3.0
 sphinxcontrib-applehelp==1.0.7
 sphinxcontrib-devhelp==1.0.5
 sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
