--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ commands:
     steps:
       - run: sudo apt-get update
       # NEEDRESTART_MODE prevents automatic restarts which seem to hang.
-      - run: NEEDRESTART_MODE=l sudo apt-get install -y cmake ${TOOLCHAIN_PACKAGES}
-      - run: NEEDRESTART_MODE=l sudo apt-get install -y libcmocka-dev libcjson-dev
+      - run: sudo NEEDRESTART_MODE=l  apt-get install -y cmake ${TOOLCHAIN_PACKAGES}
+      - run: sudo NEEDRESTART_MODE=l apt-get install -y libcmocka-dev libcjson-dev
   build-with-cmocka-from-source:
     # For whatever reason, cmocka find stopped working on dockercross at some point.
     steps:
