--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,11 +213,12 @@ jobs:
     steps:
       - checkout
       - run: choco install cmake -y
+      - run: choco install ninja -y
       - run: git clone https://git.cryptomilk.org/projects/cmocka.git
       - run: cd cmocka && git checkout tags/cmocka-1.1.5 
-      - run: /c/Program\ Files/Cmake/bin/cmake -S cmocka -B cmocka_build
+      - run: /c/Program\ Files/Cmake/bin/cmake -S cmocka -B cmocka_build -G Ninja
       - run: /c/Program\ Files/Cmake/bin/cmake --build cmocka_build
-      - run: /c/Program\ Files/Cmake/bin/cmake -S . -B libcbor_build -DWITH_TESTS=ON -DCMOCKA_INCLUDE_DIR=cmocka/include -DCMOCKA_LIBRARIES=$(pwd)/cmocka_build/src/Debug/cmocka.lib
+      - run: /c/Program\ Files/Cmake/bin/cmake -S . -B libcbor_build -DWITH_TESTS=ON -DCMOCKA_INCLUDE_DIR=cmocka/include -DCMOCKA_LIBRARIES=$(pwd)/cmocka_build/src/Debug/cmocka.lib -G Ninja
       - run: /c/Program\ Files/Cmake/bin/cmake --build libcbor_build
       - run: >
           export PATH="$(pwd)/cmocka_build/src/Debug/:$PATH" &&
