--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,6 +16,9 @@ target_link_libraries(sort cbor)
 add_executable(hello hello.c)
 target_link_libraries(hello cbor)
 
+add_executable(cbor_sequence cbor_sequence.c)
+target_link_libraries(cbor_sequence cbor)
+
 find_package(CJSON)
 
 if(CJSON_FOUND)
