--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,6 +238,17 @@ jobs:
     docker:
       - image: dockcross/linux-mipsel-lts
 
+
+  build-and-test-riscv64: &dockcross-job
+    docker:
+      - image: dockcross/linux-riscv64
+    steps: 
+      - checkout
+      - attach_workspace:
+          at: /home/circleci/project
+      - build-with-cmocka-from-source
+      - test
+
 workflows:
   build-and-test:
     jobs:
@@ -250,6 +261,7 @@ workflows:
       - build-and-test-win
       - build-and-test-mips
       - build-and-test-mipsel
+      - build-and-test-riscv64
       - build-bazel
       - llvm-coverage
       # OSX builds are expensive, run only on master
