--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,6 +17,9 @@ freebsd_task:
     - name: freebsd-14-3
       freebsd_instance:
         image_family: freebsd-14-3
+    - name: freebsd-15-0-amd64-zfs
+      freebsd_instance:
+        image_family: freebsd-15-0-amd64-zfs
     - name: freebsd-16-0-snap
       freebsd_instance:
         image_family: freebsd-16-0-snap
