--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -14,12 +14,12 @@ freebsd_task:
     - ctest -VV
     matrix:
     # From gcloud compute images list --project freebsd-org-cloud-dev --no-standard-images
-    - name: freebsd-13-5
-      freebsd_instance:
-        image_family: freebsd-13-5
     - name: freebsd-14-3
       freebsd_instance:
         image_family: freebsd-14-3
-    - name: freebsd-15-0-snap
+    - name: freebsd-15-0-amd64-zfs
       freebsd_instance:
-        image_family: freebsd-15-0-snap
+        image_family: freebsd-15-0-amd64-zfs
+    - name: freebsd-16-0-snap
+      freebsd_instance:
+        image_family: freebsd-16-0-snap
