Only generate coverage targets if the COVERAGE option is enabled
Fixes #383

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,7 +12,7 @@ foreach(test_file ${TESTS})
   string(REGEX REPLACE ".*/([^/]+).c" "\\1" NAME ${test_file})
   message("Adding test ${NAME}")
   add_executable(${NAME} "${NAME}.c" assertions.c stream_expectations.c
-                         test_allocator.c)
+    test_allocator.c)
   target_link_libraries(${NAME} ${CMOCKA_LIBRARIES})
   target_link_libraries(${NAME} cbor)
   if(MATH_LIBRARY)
@@ -20,7 +20,9 @@ foreach(test_file ${TESTS})
   endif()
   target_include_directories(${NAME} PUBLIC ${CMOCKA_INCLUDE_DIR})
   add_test(NAME ${NAME} COMMAND ${NAME})
-  add_dependencies(coverage ${NAME})
+  if(COVERAGE)
+    add_dependencies(coverage ${NAME})
+  endif()
 endforeach()
 
 add_executable(cpp_linkage_test cpp_linkage_test.cpp)
